GNOME Bugzilla – Bug 669025
sound: fix a couple of implicit declarations
Last modified: 2012-01-30 14:15:10 UTC
Created attachment 206425 [details] [review] Include math.h to prevent implicit/incompatible declarations on round(3) Hi. On at least OpenBSD, I'm getting the following warnings when compiling: gvc-mixer-dialog.c:776: warning: implicit declaration of function 'round' gvc-mixer-dialog.c:776: warning: incompatible implicit declaration of built-in function 'round' <...> gvc-stream-status-icon.c:77: warning: implicit declaration of function 'round' gvc-stream-status-icon.c:77: warning: incompatible implicit declaration of built-in function 'round' The is a missing declaration of round() and the one from gcc built-in is incompatible with the one from libm. Including math.h fixes that.