sound: fix a couple of implicit declarations

Include math.h to prevent implicit/incompatible declarations on round(3).

https://bugzilla.gnome.org/show_bug.cgi?id=669025